# shone

./: .gitignore  LICENSE  README.md  README.rst  codecov.yml  novais_2024.py  pyproject.toml  tox.ini  transmission_novais_2024.ipynb
.github/workflows/: ci.yml
docs/: conf.py  index.rst
docs/logo/: _logo.py
docs/shone/: api.rst  dev.rst  examples.rst  index.rst  installation.rst  opacities.rst
docs/shone/examples/: chemistry.rst  opacities.rst  simple_transmission.rst  transmission.rst  transmission_novais_2024.ipynb
examples/: fastchem-grid.ipynb  fastchem-interactive.ipynb
licenses/: APACHE2.rst  BSD2.rst  BSD3.rst  GPLv3.rst
shone/: __init__.py  chemistry.py  config.py  constants.py  convolution.py  spectrum.py
shone/chemistry/: __init__.py  fastchem.py  translate.py
shone/chemistry/tests/: test_chemistry.py
shone/data/: CO2_opacity.npy  H2O_opacity.npy  TiO_opacity.npy
shone/emission/: __init__.py  absorb_approx.py  discrete_ordinate.py
shone/opacity/: __init__.py  archive.py  binning.py  continuum.py  dace.py  io.py  scattering.py
shone/opacity/tests/: test_dace.py
shone/tests/: test_chemistry.py  test_spectrum.py
shone/transmission/: __init__.py  de_wit_seager_2013.py  heng_kitzmann_2017.py  hk2017.py  novais_2024.py
shone/transmission/tests/: test_transmission.py
